# bonsai-pot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  extract.py
.cargo/: config.toml
crates/pot-shader/: Cargo.toml
crates/pot-shader/src/: lib.rs
examples/: chat.rs  generate.rs
scripts/: bpe.py  extract.py
src/: bench.rs  decode.rs  error.rs  forward.rs  kv_snapshot.rs  lib.rs  main.rs  model.rs  session.rs
src/shaders/: argmax.wgsl  attention.wgsl  attention_merge.wgsl  attention_split.wgsl  embed.wgsl  kv_writeback.wgsl  kv_writeback_fused.wgsl  matmul_q1_0_q8_0.wgsl  matvec_q1_0.wgsl  matvec_q1_0_fused.wgsl  matvec_q1_0_fused_normed.wgsl  matvec_q1_0_silu.wgsl  probe_subgroup.wgsl  q_norm_rope_fused.wgsl  quantize_q8_0.wgsl  rms_norm.wgsl  rope_neox.wgsl  silu_mul.wgsl  topk_reduce.wgsl
tests/: gpu_integration.rs
