[package]
name = "bonsai-pot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "bonsai_pot"
path = "src/lib.rs"

[[bin]]
name = "bonsai-pot"
path = "src/bin/bonsai-pot.rs"
required-features = ["bench-internals"]

[features]
default = []
# Exposes bench/microbench utilities under `bonsai_pot::__bench` and pulls in
# the extra deps needed by the bundled `bonsai-pot` binary. Not part of the
# stable public library API.
bench-internals = ["dep:pollster", "dep:env_logger"]

[dependencies]
# Library deps.
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
log = "0.4"
futures-intrusive = "0.5"

# Bin-only deps (gated behind `bench-internals`, which the bin requires).
pollster = { version = "0.3", optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
pollster = "0.3"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
absolute_paths = "warn"
too_many_arguments = "allow"
too_many_lines = "allow"
many_single_char_names = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
float_cmp = "allow"
