[workspace]
members = [".", "crates/pot-shader"]
resolver = "3"

[package]
name = "bonsai-pot"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "bonsai_pot"
path = "src/lib.rs"

[[bin]]
name = "bonsai-pot"
path = "src/bin/bonsai-pot.rs"
required-features = ["bench-internals"]

[features]
default = ["half", "sg-8", "sg-16", "sg-32", "sg-64"]
# Exposes bench/microbench utilities under `bonsai_pot::__bench` and pulls in
# the extra deps needed by the bundled `bonsai-pot` binary. Not part of the
# stable public library API.
bench-internals = ["dep:pollster", "dep:env_logger"]
# Use the built-in primitive `f16` type (requires a nightly toolchain with
# `#![feature(f16)]`) instead of the `half` crate.
nightly = []
# Use the `half` crate. This is required if `nightly` is not enabled
half = ["dep:half"]
# Pre-compiled SPIR-V variants for each subgroup size. All four are on by
# default; disable any size you know your hardware never uses to slim the binary.
sg-8  = ["pot-shader/sg-8"]
sg-16 = ["pot-shader/sg-16"]
sg-32 = ["pot-shader/sg-32"]
sg-64 = ["pot-shader/sg-64"]

[dependencies]
# Library deps.
wgpu = { version = "29", default-features = false, features = ["std", "vulkan"] }
ash = "0.38"
bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"], optional = true }
log = "0.4"
thiserror = "2"
pot-shader = { path = "crates/pot-shader" }

# Bin-only deps (gated behind `bench-internals`, which the bin requires).
pollster = { version = "0.3", optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
pollster = "0.3"
env_logger = "0.11"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes_without_reason = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
expect_used = "warn"
float_cmp = "allow"
many_single_char_names = "allow"
panic = "warn"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
unused_trait_names = "warn"
unwrap_used = "warn"
