[package]
name = "pot-shader"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[features]
sg-8 = []
sg-16 = []
sg-32 = []
sg-64 = []

[dependencies]
naga = { version = "29", features = ["wgsl-in", "spv-out"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
